# ln882x-sdk

./: CHANGELOG.md  CHANGELOG_en.md  CMakeLists.txt  README.md  README_en.md  start_build.py
components/atcmd/: CMakeLists.txt  at_cmd_basic.c  at_cmd_basic.h  at_cmd_wifi.c  at_cmd_wifi.h  at_list.c  at_list.h  at_parser.c  at_parser.h  at_string.c  at_string.h  at_task.c  at_task.h  console.c  console.h
components/fota/: CMakeLists.txt
components/fota/ota_agent/: ota_port.c
components/fs/kv/: CMakeLists.txt
components/fs/kv/kv_port/: ln_kv_key_def.h  ln_kv_port.c  ln_kv_port.h
components/fs/nvds/: CMakeLists.txt  ln_nvds.c
components/fs/partition_mgr/: CMakeLists.txt  flash_partition_mgr.c
components/kernel/: CMakeLists.txt
components/kernel/FreeRTOS/Source/: tasks.c
components/kernel/FreeRTOS/Source/include/: FreeRTOSConfig.h
components/kernel/FreeRTOS_Adapter/: freertos_common.c  freertos_common.h
components/net/dhcpd/: CMakeLists.txt  dhcpd.c
components/net/httpsclient/: CMakeLists.txt
components/net/httpsclient/inc/: httpsclient_wrapper.h
components/net/httpsclient/src/: httpsclient.c
components/net/iperf/: CMakeLists.txt  iperf.c
components/net/ping/: CMakeLists.txt  ping.c
components/phony/: CMakeLists.txt
components/qcloud_iot_c_sdk/: CMakeLists.txt
components/qcloud_iot_c_sdk/include/: config.h  qcloud_iot_export_variables.h  qcloud_iot_import.h
components/qcloud_iot_c_sdk/include/exports/: qcloud_iot_export_dynreg.h  qcloud_iot_export_log.h  qcloud_iot_export_method.h  qcloud_iot_export_system.h
components/qcloud_iot_c_sdk/platform/: HAL_Device_freertos.c  HAL_OS_freertos.c  HAL_TCP_lwip.c  HAL_TLS_mbedtls.c  HAL_Timer_freertos.c
components/qcloud_iot_c_sdk/sdk_src/: data_template_client_common.c  data_template_client_json.c  dynreg.c  mqtt_client.c  qcloud_iot_log.c
components/serial/: CMakeLists.txt  serial.c  serial.h
components/smartliving_sdk/: CMakeLists.txt
components/smartliving_sdk/src/infra/system/: guider.c
components/smartliving_sdk/src/ref-impl/hal/: CMakeLists.txt
components/smartliving_sdk/src/services/awss/: awss_crypt.c  awss_smartconfig_mcast.c
components/systemview/: CMakeLists.txt
components/systemview/Config/: SEGGER_RTT_Conf.h  SEGGER_SYSVIEW_Conf.h  SEGGER_SYSVIEW_Config_FreeRTOS.c
components/systemview/SEGGER/: SEGGER_SYSVIEW.c  SEGGER_SYSVIEW.h  SEGGER_SYSVIEW_ConfDefaults.h
components/systemview/Sample/FreeRTOSV9/: SEGGER_SYSVIEW_FreeRTOS.c  SEGGER_SYSVIEW_FreeRTOS.h
components/systemview/docs/: user_guide_of_systemview.md
components/utils/: CMakeLists.txt  art_string.c  dflt_param_tab.h  ln_mem_pool.h  system_parameter.c  system_parameter.h  wrap_stdio.c
components/utils/debug/: log.c  log.h
components/utils/fifo/: fifobuf.c  fifobuf.h
components/utils/reboot_trace/: reboot_trace.c  reboot_trace.h
components/utils/runtime/: runtime.c
components/utils/unicode_convert/: table_big5_ucs2.h  table_gbk_ucs2.h  unicode_convert.c  unicode_convert.h
doc/: gpio.xlsx  how-to-build-of-cmake.md  (+3 more)
project/wifi_mcu_basic_example/: CMakeLists.txt
project/wifi_mcu_basic_example/app/: main.c  usr_app.c
project/wifi_mcu_basic_example/examples/: demo_def.h  dma_uart_demo.c  httpdemo01.c  ssl_client_demo.c
project/wifi_mcu_basic_example/keil_ln882x_rel/: wifi_mcu_basic_example.uvoptx  wifi_mcu_basic_example.uvprojx
project/wifi_mcu_ota_demo/: CMakeLists.txt
project/wifi_mcu_ota_demo/app/: main.c  usr_app.c
project/wifi_mcu_ota_demo/cfg/: flash_partition_cfg.json  proj_config.h
project/wifi_mcu_ota_demo/examples/: ota_demo.c  ota_demo.h
project/wifi_mcu_ota_demo/gcc/: gcc-custom-build-stage.cmake  gcc-flags.cmake
project/wifi_mcu_ota_demo/keil_ln882x_rel/: ln882x.sct  wifi_mcu_ota_demo.uvoptx  wifi_mcu_ota_demo.uvprojx
project/wifi_mcu_ota_demo/startup/: startup_ln882x_gcc.c
project/wifi_mcu_qcloud_misc_demo/: CMakeLists.txt
project/wifi_mcu_qcloud_misc_demo/app/: main.c  ota_mqtt_example.c  ota_mqtt_example.h  temp_cal_app.c  temp_cal_app.h  usr_app.c  usr_app.h  wifi_setup.c  wifi_setup.h
project/wifi_mcu_qcloud_misc_demo/docs/: README.md
project/wifi_mcu_qcloud_misc_demo/gcc/: ln882x.ld
project/wifi_mcu_qcloud_misc_demo/keil_ln882x_rel/: wifi_mcu_qcloud_misc_demo.uvoptx  wifi_mcu_qcloud_misc_demo.uvprojx
project/wifi_mcu_qcloud_misc_demo/qcloud_iot_samples/: CMakeLists.txt
project/wifi_mcu_qcloud_misc_demo/qcloud_iot_samples/data_template/: data_config.c
project/wifi_mcu_qcloud_misc_demo/qcloud_iot_samples/mqtt/: mqtt_sample.c
project/wifi_mcu_qcloud_misc_demo/qcloud_iot_samples/scenarized/: light_data_template_sample.c
project/wifi_mcu_qcloud_misc_demo/qcloud_port/: airkiss_port_qcloud.c  airkiss_port_qcloud.h
project/wifi_mcu_smartconfig_demo/: CMakeLists.txt
project/wifi_mcu_smartconfig_demo/app/: main.c  usr_app.c
project/wifi_mcu_smartconfig_demo/bsp/: drv_adc_measure.c
project/wifi_mcu_smartconfig_demo/cfg/: proj_config.h
project/wifi_mcu_smartconfig_demo/keil_ln882x_rel/: after_build_ln882x.bat  wifi_mcu_smartconfig_demo.uvoptx  wifi_mcu_smartconfig_demo.uvprojx
project/wifi_mcu_smartliving_demo/: CMakeLists.txt
project/wifi_mcu_smartliving_demo/app/: main.c  usr_app.c
project/wifi_mcu_smartliving_demo/bsp/: drv_adc_measure.c
project/wifi_mcu_smartliving_demo/cfg/: flash_partition_cfg.json  flash_partition_table.h
project/wifi_mcu_smartliving_demo/gcc/: ln882x.ld
project/wifi_mcu_softapconfig_demo/: CMakeLists.txt
project/wifi_mcu_softapconfig_demo/app/: main.c  usr_app.c
project/wifi_mcu_softapconfig_demo/bsp/: serial_hw.c
project/wifi_mcu_softapconfig_demo/cfg/: flash_partition_table.h
project/wifi_mcu_softapconfig_demo/keil_ln882x_rel/: wifi_mcu_softapconfig_demo.uvoptx  wifi_mcu_softapconfig_demo.uvprojx
project/wifi_mcu_tcp_demo/: CMakeLists.txt
project/wifi_mcu_tcp_demo/app/: main.c  usr_app.c
project/wifi_mcu_tcp_demo/examples/: tcp_server_echo.c
project/wifi_mcu_tcp_demo/gcc/: gcc-custom-build-stage.cmake
project/wifi_mcu_tcp_demo/keil_ln882x_rel/: tcp_demo.uvoptx  tcp_demo.uvprojx
(+98 files in other folders)
